# sas-audio-processor

./: .gitignore  CLAUDE.md  README.md  build.sh  pyproject.toml  requirements.txt  sas-processor.spec
.github/workflows/: ci.yml  release.yml
plans/: analyze.yaml  compress.yaml  convert.yaml  detect-key.yaml  eq.yaml  filter.yaml  full-analysis.yaml  gain.yaml  limit.yaml  loudness.yaml  master-track.yaml  melody-extract.yaml  melody-to-midi.yaml  mono.yaml  normalize.yaml  onset-detect.yaml  ping.yaml  pitch-shift.yaml  reverb.yaml  sample-prep.yaml  silence-remove.yaml  split-bars.yaml  tempo-match.yaml  time-stretch.yaml  trim.yaml
src/sas_processor/: __init__.py  __main__.py  analysis.py  beat_detection.py  cli.py  effects.py  feature_extraction.py  midi_extraction.py  processor.py  time_stretch.py
tests/: __init__.py  conftest.py  fixtures.py  test_binary_e2e.py  test_e2e.py  test_feature_extraction.py  test_plans_e2e.py  test_processor.py  test_real_audio.py  test_time_stretch.py
